# photo-verifier

./: .gitignore  AGENTS.md  Dockerfile.presign  README.md  agents-workflow.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-license.mjs
.github/workflows/: ci.yml  release.yml
demo-site/: .env  README.md  eslint.config.js  package.json  tsconfig.api-runtime.json
demo-site/app/: globals.css  layout.tsx
demo-site/components/: Gallery.tsx
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  CONTRACT_CONSTANTS.md  DEVNET_RUNBOOK.md  LICENSING.md  NPM_RELEASE_WORKFLOW.md  README.md  SDK_MIGRATION.md  SDK_PACKAGING_STRATEGY.md  TROUBLESHOOTING.md
docs/issues/: issue-089-h3-location-privacy.md
infra/: deploy.sh  presign-api.yaml
on-chain/photo-proof-compressed/programs/photo-proof-compressed/: Cargo.toml  Xargo.toml
on-chain/photo-proof-compressed/programs/photo-proof-compressed/src/: lib.rs
photo-verifier/: .env  README.md  app.json  metro.config.js  package.json  tsconfig.json
photo-verifier/app/: _layout.tsx  (+1 more)
scripts/: README.md  binary-codec-vectors.test.mjs  blockchain-parity.test.mjs  check-contract-constants.mjs  cluster-routing.test.mjs  core-sdk-parity.test.mjs  demo-api-runtime.test.mjs  demo-runtime-cache.test.mjs  dev-local.sh  dev-setup.sh  dev-start.sh  h3-pda-contracts.test.mjs  npm-pack-check.sh  npm-publish-dry-run.sh  presign-onchain-flow.test.mjs  quick-test.sh  run-presign.js  seeker-cache.test.mjs  seeker-sdk-facade.test.mjs  seeker-verification-flow.test.mjs  test.sh  tree-cost-edge-cases.test.mjs  version.sh
(+101 files in other folders)
